--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <title>Weather Dashboard</title>
@@ -43,9 +43,44 @@
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
         <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+  
+
+
+      </div>
+              <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+            <img src="" alt= "" class= weatherImage> 
+            </div>
+            <div class="weatherTemp"></div>
+            <h2 class="weatherCity">City</h2>
+            <p class="weatherDay"></p>
+            <div class="Current"></div>
+                <p class="weatherIndicator Humidity"><span class="value">Humidity</span></p>
+                <p class="weatherIndicator Wind"><span class="value">Wind</span></p>
+                <p class="weatherIndicator Pressure"><span class="value">Pressure</span>P</p>
+                <img src="" alt= "" class= weatherImage> 
+    </div>
+  </div>
+
+  <div class="container text-center">
+    <div class="row weatherList">
+      <div class="col">
+        Day-1
+      </div>
+      <div class="col">
+        Day-2
+      </div>
+      <div class="col">
+        Day-3
+      </div>
+      <div class="col">
+        Day-4
+      </div>  <div class="col">
+       Day-5
       </div>
     </div>
   </div>
+
+ 
 
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
