--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <h2 class="weatherCity">City</h2>
             <p class="weatherDay"></p>
             <div class="Current"></div>
-                <p class="weatherIndicator Humidity"><span class="value">Humidity</span></p>
+                <p class="weatherIndicator Temp"><span class="value">Temp</span></p>
                 <p class="weatherIndicator Wind"><span class="value">Wind</span></p>
-                <p class="weatherIndicator Pressure"><span class="value">Pressure</span>P</p>
+                <p class="weatherIndicator Humidity"><span class="value">Humidity</span>P</p>
                 <img src="" alt= "" class= weatherImage> 
     </div>
   </div>
